--- a/marvelhomes/account/templates/news_list.html
+++ b/marvelhomes/account/templates/news_list.html
@@ -1,29 +1,60 @@
-<!-- {% extend 'mainpage.html' %}
-{% block content %}
-<section>
-    <div class="container">
-        <div class="row">
-            {% if news_list %}
-                {% for news in news_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ news.title }}</h5>
-                            {% if news.photo %}
-                            <img src="{{ news.photo.url }}" class="card-img-top" alt="{{ news.title }}">
-                            {% endif %}
-                            <p class="card-text">{{ news.description }}</p>
-                            <p class="card-text">Updated: {{ news.updated_date }} {{ news.updated_time }}</p>
+<!doctype html>
+<html lang="en">
+    <head>
+        <title>All_NEWS</title>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+
+        <!-- Bootstrap CSS v5.2.1 -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+    </head>
+
+    <body>
+        <section>
+            <div class="container my-5">
+                <div class="row">
+                    {% if news_list %}
+                        {% for news in news_list %}
+                        <div class="col-md-4">
+                            <div class="card mb-2 overflow-hidden" style="height: 18rem;">
+                                {% if news.photo %}
+                                    <img src="{{ news.photo.url }}" class="card-img img-fluid" alt="{{ news.title }}" style="width: 20rem;">
+                                    {% endif %}
+                                <div class="card-img-overlay text-light">
+                                    <h5 class="card-title">{{ news.title }}</h5>
+                                    <p class="card-text">{{ news.description }}</p>
+                                    <p class="card-text">Updated: {{ news.updated_date }} {{ news.updated_time }}</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                        {% endfor %}
+                    {% else %}
+                        <div class="col-12">
+                            <p>No news items found.</p>
+                        </div>
+                    {% endif %}
                 </div>
-                {% endfor %}
-            {% else %}
-                <div class="col-12">
-                    <p>No news items found.</p>
-                </div>
-            {% endif %}
-        </div>
-    </div>
-</section>
-{% endblock content%} -->
+            </div>
+        </section>
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"
+        ></script>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous"
+        ></script>
+    </body>
+</html>
