category wise properties

--- a/marvelhomes/account/templates/detail_news.html
+++ b/marvelhomes/account/templates/detail_news.html
@@ -25,6 +25,7 @@
         
         <h1>{{news.title}}</h1>
         <p>{{news.description}}</p>
+        <img src="{{news.photo.url}}" alt="" class="img-fluid">
        </div>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
