--- a/marvelhomes/account/templates/category_property.html
+++ b/marvelhomes/account/templates/category_property.html
@@ -31,7 +31,9 @@
                    <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                        {{prop.payment_plan}} PAYMENT PLAN
                    </div>
-                   <img src="{{prop.image.url}}" class="card-img-top" alt="Logo">
+                   <a href="{% url 'property_detail' prop.id %}">
+                    <img src="{{prop.image.url}}" class="card-img-top" alt="Logo">
+                   </a>
                    <div class="card-body">
                        <p class="card-text">
                          {{prop.category}}
