--- a/marvelhomes/account/templates/mainpage.html
+++ b/marvelhomes/account/templates/mainpage.html
@@ -126,7 +126,9 @@
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
                                 {{apartment.payment_plan}} PAYMENT PLAN
                             </div>
-                            <img src="{{apartment.image.url}}" class="card-img-top" alt="Logo">
+                            <a href="{% url 'property_detail' apartment.id %}">
+                                <img src="{{apartment.image.url}}" class="card-img-top" alt="Logo">
+                            </a>
                             <div class="card-body">
                                 <p class="card-text">apartment
                                     {% if apartment.type %}
