--- a/marvelhomes/account/templates/inc/navbar.html
+++ b/marvelhomes/account/templates/inc/navbar.html
@@ -496,7 +496,7 @@
                             <li><a class="dropdown-item" href="{% url 'category_property' 'apartments' %}">APARTMENTS</a></li>
                             <li><a class="dropdown-item" href="{% url 'category_property' 'villas' %}">VILLAS</a></li>
                             <li><a class="dropdown-item" href="{% url 'category_property' 'townhouses' %}">TOWNHOUSES</a></li>
-                            <li><a class="dropdown-item" href="#">SEE ALL THE PROPERTIES</a></li>
+                            <li><a class="dropdown-item" href="{% url "all_property" %}">SEE ALL THE PROPERTIES</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
