--- a/marvelhomes/account/templates/mainpage.html
+++ b/marvelhomes/account/templates/mainpage.html
@@ -165,20 +165,26 @@
                 <div class="row">
                     <div class="col-md-4 mb-4">
                         <div class="card1">
-                            <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
-                            <div class="card-title">Title</div>
+                            <a href="{% url 'place' 'district one' %}">
+                                <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
+                            </a>
+                            <div class="card-title">DISTRICT ONE</div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card1">
-                            <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
-                            <div class="card-title">Title</div>
+                            <a href="{% url 'place' 'palm jumeirah' %}">
+                                <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
+                            </a>
+                            <div class="card-title">PALM JUMEIRAH</div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card1">
-                            <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
-                            <div class="card-title">Title</div>
+                            <a href="{% url 'place' 'downtown' %}">
+                                <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
+                            </a>
+                            <div class="card-title">DOWNTOWN</div>
                         </div>
                     </div>
                 </div>
@@ -219,20 +225,26 @@
                 <div class="row">
                     <div class="col-md-4 mb-4">
                         <div class="card1">
-                            <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
-                            <div class="card-title">Title</div>
+                            <a href="{% url 'place' 'dubai marina' %}">
+                                <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
+                            </a>
+                            <div class="card-title">DUBAI MARINA</div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card1">
-                            <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
-                            <div class="card-title">Title</div>
+                            <a href="{% url 'place' 'dubai creek harbour' %}">
+                                <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
+                            </a>
+                            <div class="card-title">DUBAI CREEK HARBOUR</div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4">
                         <div class="card1">
-                            <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
-                            <div class="card-title">Title</div>
+                            <a href="{% url 'place' 'business bay' %}">
+                                <img class="card-img-top" src="{% static 'images/samaezdan.jpg' %}" alt="Card image cap">
+                            </a>
+                            <div class="card-title">BUSINESS BAY</div>
                         </div>
                     </div>
                 </div>
