--- a/marvelhomes/account/templates/property_details.html
+++ b/marvelhomes/account/templates/property_details.html
@@ -35,7 +35,7 @@
             </div>
             <img src="{{property.image.url}}" alt="" class="img-fluid">
 
-            <div class="border border-3 w-50 mt-3 p-4" style="height: 10rem;">
+            <div class="border border-3 w-75 mt-3 p-4" style="height: 10rem;">
                 <h3>Overview</h3>
                 <div class="d-flex">
                     <div class="d-flex flex-column me-5">
@@ -58,7 +58,7 @@
             </div>
             
            <!-- Description -->
-            <div class="border border-3 w-50 mt-3 p-4">
+            <div class="border border-3 w-75 mt-3 p-4">
                 <h3>Description</h3>
                 {{property.description}}
 
@@ -66,7 +66,7 @@
 
            <!-- Details -->
            {% if property.detail %}
-           <div class="border border-3 w-50 mt-3 p-4">
+           <div class="border border-3 w-75 mt-3 p-4">
             <h3>Details</h3>
             <div class="border border-3 bg-secondary">
                 <div class="row">
@@ -95,8 +95,42 @@
                 </div>
             </div>
 
+            {% if property.payment_details %}
+                <h3>payment details</h3>
+                <div class="row">
+                    <div class="col-3">
+                        <p class="fw-bold">On booking</p>
+                        <p class="fw-bold">During construction</p>
+                    </div>
+                    <div class="col-3">
+                        <p>{{property.payment_details.on_booking}}</p>
+                        <p>{{property.payment_details.during_construction}}</p>
+                    </div>
+                    <div class="col-3">
+                        <p class="fw-bold">Upon handover</p>
+                    </div>
+                    <div class="col-3">
+                        <p>{{property.payment_details.upon_handover}}</p>
+                    </div>
+                </div>
+            {% endif %}
+
            </div>
             
+           {% endif %}
+
+           {% if property.map %}
+           <div class="border border-3 w-75 mt-3 p-4">
+            <h3>Location</h3>
+            <iframe width="700" height="345" src="{{ property.map }}"></iframe>
+           </div>
+           {% endif %}
+           
+           {% if property.video %}
+           <div class="border border-3 w-75 mt-3 p-4">
+            <h3>Video</h3>
+            <iframe width="700" height="345" src="{{ property.video }}"></iframe>
+           </div>
            {% endif %}
 
         </div>
