--- a/marvelhomes/account/templates/inc/navbar.html
+++ b/marvelhomes/account/templates/inc/navbar.html
@@ -522,6 +522,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">NEWS</a>
                     </li>
+                    <li class="nav-item">
+                        <i class="fa-solid fa-user"></i>
+                    </li>
                    
                 </ul> 
             </div>
